Enter JS drop down modal and dark mode light mode

--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -12,6 +12,7 @@
 
 
 body{
-    // font-family: "Your font here";
+    font-family: "DM Serif Display", serif;
+    font-family: "Karla", sans-serif;
 }
 
